*Empty MediaWiki Message*

--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -1,21 +1,21 @@
 {{translate}}
 {| class="toccolours" align="right" width="300px"
-|+ <font size="+1">'''འབྲུག་ཡུལ་'''</font>
+|+ <font size="+1">'''འབྲུག་རྒྱལ་ཁབ་'''</font>
 |-
 
 | align="center" colspan=2 |
 {| border="0" cellpadding="2" cellspacing="0"
 |-
 | align="center" width="140px" | [[File:Flag of Bhutan.svg|125px|Flag of Bhutan]]
-| align="center" width="140px" | [[File:Emblem_of_Bhutan.svg|111px|Emblem of Bhutan]]
+| align="center" width="140px" | [[File:Emblem of Bhutan.svg|111px|Emblem of Bhutan]]
 |-
 | align="center" width="140px"|([[ཧྥ་རན་སིའི་དར་ཆ།]])
 | align="center" width="140px"|([[རྒྱལ་ཡོངས་ལས་རྟགས།]])
 |}
 |-
-| [[File:National Anthem of Bhutan - Ђуг ѕе́нде (འབྲུག་ཙན་དན).oga]]
+| '''[[:be:Мы, беларусы|འབྲུག་ཙན་དན་]]''' [[File:My Belarusy.ogg]]
 |-
-| align=center colspan=2|[[File:Bhutan in its region.svg|300px]]
+| align=center colspan=2|[[File:Bhutan on the globe (Bhutan centered).svg|200px]]
 |-
 | [[རྒྱལ་ཡོངས་ཁ་སྐད།]] || [[རྫོང་ཁ་]]
 |-
@@ -31,16 +31,17 @@
 | Population<br />&nbsp;- Total ([[༢༠༠༩]])<br />&nbsp;- [[Population density]]
 | 697,000
 |-
-| Capital || [[ཐིམ་ཕུགུ]]
+| Capital || [[ཐིམ་ཕུུུུ]]
 |-
-| [[དངུལ་]] || [[དངུལ་ཀྲམ]] (BTN)
+| [[དངུལ་]] || [[དངུལ་ཀྲམ]] (UTC)
 |-
-| [[Time zone]] <br /> &nbsp; - Summer|| UTC +6 <br />UTC +6
+| [[Time zone]] <br /> &nbsp; - Summer|| UTC +0 <br />UTC +0
 |-
 | [[རྒྱལ་པོའི་བརྟན་བཞུགས།]] || [[འབྲུག་ཙན་དན་]]
 |-
 | Calling code || 975
 |}
+
 '''འབྲུག་ཡུལ་'''
 
 == ལོ་རྒྱུས། ==
