*Empty MediaWiki Message*

--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -1,6 +1,6 @@
 {{translate}}
 {| class="toccolours" align="right" width="300px"
-|+ <font size="+1">'''འབྲུག་རྒྱལ་ཁབ་'''</font>
+|+ <font size="+1">'''འབྲུག་ རྒྱལ་ཁབ་'''</font>
 |-
 
 | align="center" colspan=2 |
@@ -15,7 +15,7 @@
 |-
 | '''[[:be:Мы, беларусы|འབྲུག་ཙན་དན་]]''' [[File:My Belarusy.ogg]]
 |-
-| align=center colspan=2|[[File:Bhutan on the globe (Bhutan centered).svg|200px]]
+| align=center colspan=2|[[File:Bhutan in its region.svg|200px]]
 |-
 | [[རྒྱལ་ཡོངས་ཁ་སྐད།]] || [[རྫོང་ཁ་]]
 |-
