--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -13,7 +13,7 @@
 | align="center" width="140px"|([[རྒྱལ་ཡོངས་ལས་རྟགས།]])
 |}
 |-
-| ''[[:be:Мы, беларусы|འབྲུག་ཙན་དན་]]'' [[File:My Belarusy.ogg]]
+| [[:be:Мы, беларусы|འབྲུག་ཙན་དན་]] [[File:My Belarusy.ogg]]
 |-
 | align=center colspan=2|[[File:Bhutan in its region.svg|300px]]
 |-
