*Empty MediaWiki Message*

--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -31,7 +31,7 @@
 | Population<br />&nbsp;- Total ([[༢༠༠༩]])<br />&nbsp;- [[Population density]]
 | 697,000
 |-
-| Capital || [[ཐིམ་ཕུུུུ]]
+| Capital || [[ཐིམ་ཕུ|ཐིམ་ཕུུུུ]]
 |-
 | [[དངུལ་]] || [[དངུལ་ཀྲམ]] (UTC)
 |-
