--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -13,7 +13,7 @@
 | align="center" width="140px"|([[རྒྱལ་ཡོངས་ལས་རྟགས།]])
 |}
 |-
-| [[:my:ကမ္ဘာမကျေ|འབྲུག་ཙན་དན་]] [[File:U.S. Navy Band - Kaba Ma Kyei.oga]]
+| [[:zh-cn:义勇军进行曲|འབྲུག་ཙན་དན་]] [[File:March of the Volunteers (instrumental).ogg]]
 |-
 | align=center colspan=2|[[File:Bhutan in its region.svg|300px]]
 |-
