*Empty MediaWiki Message*

--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -13,7 +13,7 @@
 | align="center" width="140px"|([[རྒྱལ་ཡོངས་ལས་རྟགས།]])
 |}
 |-
-| [[:zh-cn:义勇军进行曲|འབྲུག་ཙན་དན་]] [[File:March of the Volunteers (vocal).ogg]]
+| [[:zh-cn:义勇军进行曲|འབྲུག་ཙན་དན་]] [[File:中华人民共和国国歌 (1978-1982).ogg]]
 |-
 | align=center colspan=2|[[File:Bhutan in its region.svg|300px]]
 |-
