--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -13,7 +13,7 @@
 | align="center" width="140px"|([[རྒྱལ་ཡོངས་ལས་རྟགས།]])
 |}
 |-
-| [[:zh-cn:义勇军进行曲|འབྲུག་ཙན་དན་]] [[File:March of the Volunteers instrumental.ogg]]
+| [[འབྲུག་ཙན་དན་]] [[File:National Anthem of Bhutan - Ђуг ѕе́нде (འབྲུག་ཙན་དན).oga]]
 |-
 | align=center colspan=2|[[File:Bhutan in its region.svg|300px]]
 |-
