--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -13,7 +13,7 @@
 | align="center" width="140px"|([[རྒྱལ་ཡོངས་ལས་རྟགས།]])
 |}
 |-
-| [[:to:Fasi fakafonua|འབྲུག་ཙན་དན་]] [[File:Ko e fasi ʻo e tuʻi ʻo e ʻOtu Tonga.ogg]]
+| ''[[:to:Fasi fakafonua|འབྲུག་ཙན་དན་]]''' [[File:Ko e fasi ʻo e tuʻi ʻo e ʻOtu Tonga.ogg]]
 |-
 | align=center colspan=2|[[File:Bhutan in its region.svg|300px]]
 |-
