--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -5,14 +5,14 @@
 | align="center" colspan=2 |
 {| border="0" cellpadding="2" cellspacing="0"
 |-
-| align="center" width="140px" | [[File:Flag of Bhutan.svg|130px|Flag of Bhutan]]
-| align="center" width="140px" | [[File:Emblem of Bhutan.svg|120px|Emblem of Bhutan]]
+| align="center" width="140px" | [[File:Flag of Bhutan.svg|125px|Flag of Bhutan]]
+| align="center" width="140px" | [[File:Emblem of Bhutan.svg|111px|Emblem of Bhutan]]
 |-
 | align="center" width="140px"|([[ཧྥ་རན་སིའི་དར་ཆ།]])
 | align="center" width="140px"|([[རྒྱལ་ཡོངས་ལས་རྟགས།]])
 |}
 |-
-| align=center colspan=2|[[File:Bhutan in its region.svg|305px]]
+| align=center colspan=2|[[File:Bhutan in its region.svg|300px]]
 |-
 | རྒྱལ་ཡོངས་ཁ་སྐད། || [[རྫོང་ཁ་]]
 |-
@@ -34,7 +34,7 @@
 |-
 | Time zone<br />&nbsp; - Summer || UTC+0<br />UTC+0
 |-
-| [[རྒྱལ་པོའི་བརྟན་བཞུགས།]] || [[འབྲུག་ཙན་དན་]]<br />[[File:National Anthem of Bhutan - Ђуг ѕе́нде (འབྲུག་ཙན་དན).oga]]
+| རྒྱལ་པོའི་བརྟན་བཞུགས། || [[འབྲུག་ཙན་དན་]]<br />[[File:National Anthem of Bhutan - Ђуг ѕе́нде (འབྲུག་ཙན་དན).oga]]
 |-
 | Calling code || 975
 |}
