--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -34,7 +34,7 @@
 |-
 | Time zone<br />&nbsp; - Summer || UTC+0<br />UTC+0
 |-
-| རྒྱལ་པོའི་བརྟན་བཞུགས། || [[འབྲུག་ཙན་དན་]]<br />[[File:National Anthem of Bhutan - Ђуг ѕе́нде (འབྲུག་ཙན་དན).oga]]
+| རྒྱལ་པོའི་བརྟན་བཞུགས། || [[:fi:Maamme|འབྲུག་ཙན་དན་]]<br />[[File:United States Navy Band - Maamme.ogg]]
 |-
 | Calling code || 975
 |}
