*Empty MediaWiki Message*

--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -34,7 +34,7 @@
 |-
 | Time zone<br />&nbsp; - Summer || UTC+0<br />UTC+0
 |-
-| རྒྱལ་པོའི་བརྟན་བཞུགས། || [[:fi:Maamme|འབྲུག་ཙན་དན་]]<br />[[File:United States Navy Band - Maamme.ogg]]
+| རྒྱལ་པོའི་བརྟན་བཞུགས། || [[:be:Мы, беларусы|འབྲུག་ཙན་དན་]]<br />[[File:My Belarusy.ogg]]
 |-
 | Calling code || 975
 |}
