*Empty MediaWiki Message*

--- a/ཐཱའི་ལེནཌ་.mw
+++ b/ཐཱའི་ལེནཌ་.mw
@@ -1,1 +1,20 @@
+{{translate}}
 
+
+King :  [[Vajiralongkorn|Rama X]]
+
+[[File:LocationThailand.svg|right|thumb|300px|ཐཱའི་ལེནཌ]]
+[[File:Flag of Thailand.svg|right|thumb]]
+[[File:Emblem of Thailand.svg|right|150px]]
+'''ཐཱའི་ལེནཌ'''
+----
+
+* [[བེང་ཀོཀ]]
+
+{{Asia}}
+
+
+{{stub}}
+
+[[Category:རྒྱལ་ཁབ]]
+[[Category:ཨེ་ཤི་ཡ]]
