Reverted edits by [[Special:Contributions/113.249.63.95|113.249.63.95]] ([[User talk:113.249.63.95|talk]]) to last revision by [[User:219.133.46.46|219.133.46.46]]

--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -1,44 +1,46 @@
 {{translate}}
 {| class="toccolours" align="right" width="300px"
-|+ <font size="+1">'''འབྲུག་རྒྱལ་ཁབ་'''</font>
+|+ <font size="+1">'''འབྲུག་ཡུལ་'''</font>
 |-
+
 | align="center" colspan=2 |
 {| border="0" cellpadding="2" cellspacing="0"
 |-
 | align="center" width="140px" | [[File:Flag of Bhutan.svg|125px|Flag of Bhutan]]
-| align="center" width="140px" | [[File:Emblem of Bhutan.svg|111px|Emblem of Bhutan]]
+| align="center" width="140px" | [[File:Emblem_of_Bhutan.svg|111px|Emblem of Bhutan]]
 |-
 | align="center" width="140px"|([[ཧྥ་རན་སིའི་དར་ཆ།]])
 | align="center" width="140px"|([[རྒྱལ་ཡོངས་ལས་རྟགས།]])
 |}
 |-
+| [[File:National Anthem of Bhutan - Ђуг ѕе́нде (འབྲུག་ཙན་དན).oga]]
+|-
 | align=center colspan=2|[[File:Bhutan in its region.svg|300px]]
 |-
-| རྒྱལ་ཡོངས་ཁ་སྐད། || [[རྫོང་ཁ་]]
+| [[རྒྱལ་ཡོངས་ཁ་སྐད།]] || [[རྫོང་ཁ་]]
 |-
-| རྒྱལ་ས། || [[ཐིམ་ཕུག]]
+| [[རྒྱལ་ས།]] || [[ཐིམ་ཕུག]]
 |-
-| རྒྱལ་པོ། || [[འཇིགས་མེད་ཁེ་སར་རྣམ་རྒྱལ་དབང་ཕྱུག]]
+| [[རྒྱལ་པོ།]] || [[འཇིགས་མེད་ཁེ་སར་རྣམ་རྒྱལ་དབང་ཕྱུག]]
 |-
-| [[སྲིད་བློན།]] || ཚེ་རིང་སྟོབ་རྒྱས།
+| [[སྲིད་བློན།]] || [[ཚེ་རིང་སྟོབ་རྒྱས།]]
 |-
-| Area<br />&nbsp;- Total<br />&nbsp;- % water
+| [[Area]]<br />&nbsp;- Total<br />&nbsp;- % water
 | 38 394 km²<br />1,35%</tr>               
 |-
-| Population<br />&nbsp;- Total ([[༢༠༠༩]])<br />&nbsp;- Population density
+| Population<br />&nbsp;- Total ([[༢༠༠༩]])<br />&nbsp;- [[Population density]]
 | 697,000
 |-
-| Capital || [[ཐིམ་ཕུུུུ|ཐིམ་ཕུགུ]]
+| Capital || [[ཐིམ་ཕུགུ]]
 |-
-| དངུལ་ || དངུལ་ཀྲམ (UTC)
+| [[དངུལ་]] || [[དངུལ་ཀྲམ]] (BTN)
 |-
-| Time zone<br />&nbsp; - Summer || UTC+0<br />UTC+0
+| [[Time zone]] <br /> &nbsp; - Summer|| UTC +6 <br />UTC +6
 |-
-| རྒྱལ་པོའི་བརྟན་བཞུགས། || [[འབྲུག་ཙན་དན་]]<br />[[File:National Anthem of Bhutan - Ђуг ѕе́нде (འབྲུག་ཙན་དན).oga]]
+| [[རྒྱལ་པོའི་བརྟན་བཞུགས།]] || [[འབྲུག་ཙན་དན་]]
 |-
 | Calling code || 975
 |}
-
 '''འབྲུག་ཡུལ་'''
 
 == ལོ་རྒྱུས། ==
@@ -46,11 +48,15 @@
 * [[མར་པ་ལོ་ཙཱ་བ]]
 
 == རྒྱལ་པོ ==
+
 * [[ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ་]]
 <br />
 [[སྐུ་འཁོར་གྱི་རྒྱུད་པ་]]
 * 1. [[ཨོ་རྒྱན་དབང་ཕྱུག་]]
-* 2. [[འཇིགས་མེད་ཁེ་སར་རྣམ་རྒྱལ་དབང་ཕྱུག་]]
+* 2. [[འཇིགས་མེད་དབང་ཕྱུག་མཆོག་]]
+* 3. [[འཇིགས་མེད་རྡོ་རྗེ་དབང་ཕྱུག་མཆོག་]]
+* 4. [[འཇིགས་མེད་སེང་གེ་དབང་ཕྱུག་མཆོག་]]
+* 5. [[འཇིགས་མེད་ཁེ་སར་རྣམ་རྒྱལ་དབང་ཕྱུག་]]
 
 == [[རྫོང་ཁག་]] ==
 [[File:Bhutan districts dzongkha.png|thumb|700px|center|[[རྫོང་ཁག]]]]
@@ -72,20 +78,23 @@
 |}
 
 == འབྲུག་ཡུལ་གྱི་ཡུལ་ཁག ==
+
 * [[ཀྲོང་གསར་]]
 * [[ཐིམ་ཕུགུ]]
+
 * [[ཕུན་ཚོགས་གླིང་]]
 * [[བཀྲིས་སྒང་]]
 * [[བསམ་གྲུབ་ལྗོངས་མཁར་]]
 * [[སྤུ་ན་ཁ་]]
+
 * [[སྤ་རོ་རིན་སྤུང་རྫོང]]
 
 == འབྲེལ་མཐུད ==
-* ''འབྲུག་'' ( [http://www.bhutan2008.bt/dz/node/675 རྫོང་ཁ] - [http://www.bhutan2008.bt/en ཨིང་ལིཤ] )
+* '' འབྲུག་ '' ( [http://www.bhutan2008.bt/dz/node/675 རྫོང་ཁ] - [http://www.bhutan2008.bt/en ཨིང་ལིཤ] )
 
 {{Asia}}
 
 == འབྲུག་རྒྱལ་ཁབ་ཀྱི་སྲིད་བློན་གྱི་མཚན་ལ་བོད་ཡིག་མི་འབྲི་བར་དབྱིན་ཡིག་བྲི་དོན་ཅི། ==
 <center>འབྲུག་རྒྱལ་ཁབ་ཀྱི་སྲིད་བློན་གྱི་མཚན་ལ་འཇིགས་མེད་འོད་ཟེར་ཕྲིན་ལས་ཞེས་གོང་དྲ་ངོས་ཀྱི་གཡས་ཕྱོགས་སུ་བྲིས་འདུག</center>
 
-[[Category:འབྲུག་ཡུལ་| ]]
+[[Category:འབྲུག་ཡུལ་|*]]
