Reverted edits by [[Special:Contributions/113.249.63.95|113.249.63.95]] ([[User talk:113.249.63.95|talk]]) to last revision by [[User:Jerzyjan1|Jerzyjan1]]

--- a/རག་བི.mw
+++ b/རག་བི.mw
@@ -1,1 +1,8 @@
+{{translate}}
+[[File:New Zealand vs South Africa 2006 Tri Nations Line Out.JPG|thumb|]]
+'''Rugby''' is an english sport. It is named after the Rugby School in the [[ཡུ་ནའི་ཊེཊ་ཀིང་ཌམ]].
 
+
+{{stub}}
+
+[[Category:རྩེད་རིགས]]
