Reverted edits by [[Special:Contributions/113.249.63.95|113.249.63.95]] ([[User talk:113.249.63.95|talk]]) to last revision by [[User:Impro|Impro]]

--- a/རིའོ་དེ་ཞ་ནེའི་རོ་.mw
+++ b/རིའོ་དེ་ཞ་ནེའི་རོ་.mw
@@ -1,1 +1,14 @@
 
+
+[[File:Montagem Rio de Janeiro.jpg|thumb|རིའོ་དེ་ཞ་ནེའི་རོ་]]
+
+'''རིའོ་དེ་ཞ་ནེའི་རོ་''', [[བཱརཱ་ཛིལ་]]།
+
+
+
+
+{{Stub}}
+{{Translate}}
+
+[[Category:བཱརཱ་ཛིལ་]]
+[[Category:གྲོང་􀮣]]
