Reverted edits by [[Special:Contributions/113.249.63.95|113.249.63.95]] ([[User talk:113.249.63.95|talk]]) to last revision by [[User:Dostojewskij|Dostojewskij]]

--- a/རྗེ་བརྩུན་པདྨ.mw
+++ b/རྗེ་བརྩུན་པདྨ.mw
@@ -1,1 +1,28 @@
+<!-- 
 
+{{About|the fiancée of the King of Bhutan|the sister of Dalai Lama|Jetsun Pema}}
+{{Use dmy dates|date=May 2011}}
+{{Infobox person
+| name        = Jetsun Pema
+| image       = 20110506-IMG 2120.jpg
+| alt         = 
+| caption     = 
+| birth_name  = Jetsun Pema
+| birth_date  = {{Birth date and age|df=yes|1990|6|4}}
+| birth_place = [[Thimphu]], Bhutan
+| death_date  = 
+| death_place = 
+| nationality = [[Bhutanese]]
+| other_names = 
+| known_for   = Engagement to [[Jigme Khesar Namgyel Wangchuck]]
+| occupation  = 
+}}
+
+-->
+[[File:Dragon Queen of Bhutan (cropped).jpg|thumb|རྗེ་བརྒྱུད་པདྨ]]
+མི་དབང་འབྲུག་རྒྱལ་བཙུན'རྗེ་བརྒྱུད་པདྨ'དབང་ཕྱུག   [[འཇིགས་མེད་ཁེ་སར་རྣམ་རྒྱལ་དབང་ཕྱུག]]
+
+{{translate}}
+{{stub}}
+
+[[Category:མི་མང་ : འབྲུག་མི]]
