Reverted edits by [[Special:Contributions/113.249.63.95|113.249.63.95]] ([[User talk:113.249.63.95|talk]]) to last revision by [[User:Impro|Impro]]

--- a/བོད།.mw
+++ b/བོད།.mw
@@ -1,1 +1,18 @@
+{{translate}}
 
+[[File:Tibet in China (undisputed + other de-facto hatched) (+all claims hatched).svg|thumb|]]
+བོད་དམ་ཡང་ན་བོད་ཡུལ་ནི་སྟོད་མངའ་རིས་སྐོར་གསུམ་དང་བར་དབུས་གཙང་རུ་བཞི། སྨད་མདོ་ཁམས་སྒང་དྲུག་བཅས་ལ་གོ། ད་ལྟའི་ཆར་བོད་ཅེས་པར་ཆབ་སྲིད་ཀྱི་གོ་བ་དང་མི་རིགས་ཀྱི་གོ་བ་གཉིས་ལེན་གྱི་ཡོད་པ་རེད། སྔ་མ་ནི་རྒྱ་ནག་གིས་བགོས་པའི་བོད་རང་སྐྱོང་ལྗོངས་ཁོངས་གཅིག་པུ་ལ་གོ་བ་དང་། ཕྱི་མ་ནི་བོད་རིགས་འདུས་པའི་བོད་ཆེན་པོའི་ཡུལ་གྲུ་ཡོངས་ལ་གོ་བ་ལེན་དགོས།བོད་ད་ལྟ་གནས་པའི་ཞིང་ཆེན་ནི། སི་ཁྲོན་དང་ཡོན་ནན། མཚོ་སྔོན། ཀན་སུ།བོད་ལྗོངས་ལྔ་རུ་བགོས་ཡོད།
+
+ཨེ་ཤ་ཡའི་ཤར་དབུས། ཧི་མ་ལ་ཡའི་རྒྱུད་ཀྱི་ནུབ་ངོས་སུ་གནས་པའི་རྒྱལ་ཁབ་ཅིག་ཡིན། མི་རིགས། བོད་པ། སྐད་ཡིག [[བོད་སྐད]]་དང་བོད་ཡིག ཆོས་རྒྱུད། བན་དང་བོན། ས་གནས་དབྱེ་བ། ཆོལ་གསུམ་སྟེ། དབུས་གཙང་དང་། ཁམས། ཨ་མདོ། དེ་ཡང་དབུས་གཙང་ཆོས་ཀྱི་ཆོལ་ཁ། མདོ་སྟོད་མི་ཡི་ཆོལ་ཁ། མདོ་སྨད་རྟ་ཡི་ཆོལ་ཁ་ཟེར་སྲོལ་ཡོད། ཡང་ན། སྟོད་མངའ་རིས་སྐོར་གསུམ་དང་། བར་དབུས་གཙང་རི་བཞི། སྨད་མདོ་ཁམས་སྒང་དྲུག་ཟེར། ད་ལྟ་གནསསྐ་བས་ཤིག་ལ་རྒྱ་ནག་ནག་གིས་དབང་སྒྱུར་འོག་གནས་ཡོད།
+
+
+-------
+* [[ལྷ་ས་]]
+* [[བོད་སྐད]]
+
+
+
+
+{{stub}}
+
+[[Category:བོད |*]]
