Reverted edits by [[Special:Contributions/113.249.63.95|113.249.63.95]] ([[User talk:113.249.63.95|talk]]) to last revision by [[User:24.104.79.230|24.104.79.230]]

--- a/སངས་རྒྱས་ཀྱི་བསྟན་པ.mw
+++ b/སངས་རྒྱས་ཀྱི་བསྟན་པ.mw
@@ -1,1 +1,8 @@
+སངས་རྒྱས་ཀྱི་བསྟན་པ་དེ་ཡག་པོ་ཞིག་རེ། 
 
+སངས་རྒྱས་ཀྱི་བསྟན་པ་ཞེས་པ་ནི་ བདག་གཞན་ལ་ཕན་པར་བྱེད་པ་ནི་ཡིན་ནོ།
+
+{{translate}}
+{{stub}}
+
+[[Category:ནང་དོན་དཀར་ཆག]]
