Reverted edits by [[Special:Contributions/113.249.63.95|113.249.63.95]] ([[User talk:113.249.63.95|talk]]) to last revision by [[User:Impro|Impro]]

--- a/སྤྱི་འཐུས་དྲག་འདེམས་ཐོག.mw
+++ b/སྤྱི་འཐུས་དྲག་འདེམས་ཐོག.mw
@@ -1,1 +1,6 @@
+སྤྱི་པའི་འཐུས་མི་དྲག་པ་རེ་འདེམས་བསྐོ་བྱེད་དགོས་པ།
+༼[[དུང་དཀར་ཚིག་མཛོད་ཆེན་མོ་]]༽ལས་བཏུས།<br />
 
+{{translate}}
+
+[[Category:དུང་དཀར་ཚིག་མཛོད་ཆེན་མོ་]]
