Reverted edits by [[Special:Contributions/113.249.63.95|113.249.63.95]] ([[User talk:113.249.63.95|talk]]) to last revision by [[User:Impro|Impro]]

--- a/སྤྱི་རྒྱན་གསུམ་.mw
+++ b/སྤྱི་རྒྱན་གསུམ་.mw
@@ -1,1 +1,6 @@
+གསལ་བྱེད་    མཛེས་བྱེད་   རང་བཞིན་གྱི་རྒྱན།<br />
+༼[[དུང་དཀར་ཚིག་མཛོད་ཆེན་མོ་]]༽ལས་བཏུས།<br />
 
+{{translate}}
+
+[[Category:དུང་དཀར་ཚིག་མཛོད་ཆེན་མོ་]]
