Reverted edits by [[Special:Contributions/113.249.63.95|113.249.63.95]] ([[User talk:113.249.63.95|talk]]) to last revision by [[User:Impro|Impro]]

--- a/བྲ་ཛིལ་ཀྱི་ས་ཁ་མཐོ་ས་.mw
+++ b/བྲ་ཛིལ་ཀྱི་ས་ཁ་མཐོ་ས་.mw
@@ -1,1 +1,21 @@
+[[file:640px-Brazil_topo.jpg|300px|right|བྲ་ཛིལ་ཀྱི་འབུར་ཐོན་སབ་ཁྲ།]]
+'''བྲ་ཛིལ་ཀྱི་ས་ཁ་མཐོ་ས་'''(Planalto Brasileiro)ནི་[[བྲ་ཛིལ་]]ཀྱི་ས་ཁ་མཐོ་ས་སྦོམ་ཤོས་ཨིན།བྲ་ཛིལ་ཀྱི་ས་ཁངས་ཕྱེད་ཤར་ལུང་ཕྱོགས་ནང་ས་ཁ་མཐོ་ས་འདི་ཙམ་ནང་འདུག།ས་གནས་མཐོ་ཤོས་[[བྷན་དེའི་ར་རྩེ་]][[ཀ་པ་ར་ཨོ་རི་རྒྱུད་]]ནང་[[ཨེས་པི་རི་ཏོ་སན་ཏོ་|ཨེས་པི་རི་ཏོ་སན་ཏོ་རྒྱལ་ཁབ་]]ཨིན་མཐོ་ཚེད་༢༨༩༢m།
+<gallery>
+File:Parque nacional do caparao.jpg|བན་དེའི་ར་རྩེ་ཀ་པ་ར་ཨོ་རི་རྒྱུད་ནང་བྲ་ཛིལ་ཀྱི་རི་རྒྱུད་གྱི་ས་གནས་མཐོ་ཤོས་ཨིན༼༢༩༨༡m༽།
+File:Marins2.JPG|མ་རིནས་རྩེ་མན་ཅི་ཀེའི་ར་རི་རྒྱུད་ནང།ས་ཁ་མཐོ་ས་འདི་ཙམ་གྱི་རི་རྒྱུད་གཅིག།
+File:Scenery in Minas Gerais Sierra - Brazil 03.jpg|མི་ནས་ཞེ་རའིས་: རྒྱལ་ཁབ་གཅིག་བྲ་ཛིལ་ཀྱི་ས་ཁ་མཐོ་ས་ནང།
+|སན་པའུ་ལོ་:གྲོང་སྡེར་སྦོམ་ཤོས་བྲ་ཛིལ་ཀྱི་ས་ཁ་མཐོ་ས་ནང།
+File:Serra do mar ubatuba.jpg|[[སེར་ར་དོ་མར་རི་རྒྱུད་|སེར་ར་དོ་མར་]](རྒྱ་མཚོ་རི་རྒྱུད)[[སན་པའུ་ལོ་རྒྱལ་ཁབ་|སན་པའུ་ལོ་]]ནང།
+</gallery>
 
+==See Also==
+*[[བྲ་ཛིལ་]]
+
+
+
+
+
+{{translate}}
+
+[[Category:བཱརཱ་ཛིལ་]]
+[[Category:འཛམ་གླིང་རྒྱས་བཤད]]
