--- a/མཉམ་མེད་སེང་གེ་དགུ.mw
+++ b/མཉམ་མེད་སེང་གེ་དགུ.mw
@@ -1,1 +1,14 @@
+# [[དྷར་མ་སེང་གེ་སངས་རྒྱས་དབོན་རས]] (1177-1237)<br>
+# [[འབྲུག་པ་གཞོན་ནུ་སེང་གེ]] (1200-1266)<br>
+# [[འབྲུག་པ་ཉི་མ་སེང་གེ]] (1251-1287)<br>
+# [[འབྲུག་པ་སེང་གེ་ཤེས་རབ]] (1238-1287)<br>
+# [[འབྲུག་པ་སེང་གེ་རིན་ཆེན]] (1258-1313) ''aka'' ([[སྤོས་སྐྱ་པ]])<br>
+# [[འབྲུག་པ་སེང་གེ་རྒྱལ་པོ]] (1289-1326)<br> 
+# [[འབྲུག་པ་ཀུན་དགའ་སེང་གེ]] (1314-1347)<br>
+# [[འབྲུག་པ་བློ་གྲོས་སེང་གེ]] (1345-1390)<br>
+# [[འབྲུག་པ་ཤེས་རབ་སེང་གེ]]  (1371-1392)<br>
 
+{{translate}}
+{{stub}}
+
+[[Category:མི་མང་]]
