Reverted edits by [[Special:Contributions/113.249.63.95|113.249.63.95]] ([[User talk:113.249.63.95|talk]]) to last revision by [[User:Impro|Impro]]

--- a/དཔལ་རྒ་ལོ་.mw
+++ b/དཔལ་རྒ་ལོ་.mw
@@ -1,1 +1,7 @@
+(རྒ་ལོ་ཙྰ་བ་གཞོན་ནུ་དཔལ)གུང་ཐང་བླ་མ་ཞང་དང་དུས་མཉམ་པ་ཁོང་གི་རྣམ་ཐར་ལས་བཤད། འཁྲུངས་ཡུལ་ཁམས་ལྡན་མ་ནས་ཡིན།  ལོ་རྒྱུས་རྒྱས་ན་ཇོ་ནང་ཏྰ་ར་ནྰ་ཐས་མཛད་པའི་《འཇམ་དཔལ་གཤིན་རྗེ་གཤེད་ཀྱི་ཆོས་འབྱུང་》དང།   《ཆོས་འབྱུང་མཁས་པའི་དགའ་སྟོན་》ལེ་ཚན་【ཏ】པའི་ཤོག་གྲངས་༡༢པར་གསལ། །<br />
+༼[[དུང་དཀར་ཚིག་མཛོད་ཆེན་མོ་]]༽ལས་བཏུས།<br />
 
+{{stub}}
+{{translate}}
+
+[[Category:དུང་དཀར་ཚིག་མཛོད་ཆེན་མོ་]]
