Reverted edits by [[Special:Contributions/113.249.63.95|113.249.63.95]] ([[User talk:113.249.63.95|talk]]) to last revision by [[User:Impro|Impro]]

--- a/དཔལ་མགོན་བདུན་བཅུ་རྩ་གཉིས་.mw
+++ b/དཔལ་མགོན་བདུན་བཅུ་རྩ་གཉིས་.mw
@@ -1,1 +1,7 @@
+སངས་རྒྱས་ལུགས་ཀྱི་གསང་སྔགས་གཞུང་ནས་བཤད་པའི་སྲུང་མ་བདུན་ཅུ་རྩ་གཉིས་སྟེ།  ལྷ་ཆེན་པོ་བརྒྱད།  ཀླུ་ཆེན་པོ་བརྒྱད།  གཟའ་ཆེན་པོ་བརྒྱད།  རྒྱུ་སྐར་ཉི་ཤུ་རྩ་བརྒྱད།  ཕྱོགས་སྐྱང་བཅུ།  རྒྱལ་པོ་ཆེན་པོ་བཞི།  འཇིགས་བྱེད་ཆེན་པོ་དགུ་སྟེ་དཔལ་མགོན་བདུན་ཅུ་རྩ་ལྔ་ཡོད་ཀྱང་།  《ཆོས་འབྱུང་མཁས་པའི་དགའ་སྟོན་》ནང་དུ་དཔལ་མགོན་བདུན་ཅུ་རྩ་གཉིས་ཞེས་གསལ་འདུག་པ་གང་ཡིན་བརྟག་དགོས་ཤིང་།  གོང་གསལ་དེ་དག་སོ་སོའི་གྲངས་འདྲེན་ནི་《གསུང་རབ་རྣམས་ལས་བཤད་པའི་གྲངས་འདདེན་》ཞེས་པ་ཟུར་དུ་ཡོད་པ་དེར་གཟིགས་པར་ཞུ། །<br />
+༼[[དུང་དཀར་ཚིག་མཛོད་ཆེན་མོ་]]༽ལས་བཏུས།<br />
 
+{{stub}}
+{{translate}}
+
+[[Category:དུང་དཀར་ཚིག་མཛོད་ཆེན་མོ་]]
