--- a/དཔལ་ཆེན་རྒ་ལོ་.mw
+++ b/དཔལ་ཆེན་རྒ་ལོ་.mw
@@ -1,1 +1,7 @@
+གོང་དུ་དཔལ་རྒ་ལོ་ཞེས་པར་གཟིགས། །<br />
+༼[[དུང་དཀར་ཚིག་མཛོད་ཆེན་མོ་]]༽ལས་བཏུས།<br />
 
+{{stub}}
+{{translate}}
+
+[[Category:དུང་དཀར་ཚིག་མཛོད་ཆེན་མོ་]]
