Reverted edits by [[Special:Contributions/113.249.63.95|113.249.63.95]] ([[User talk:113.249.63.95|talk]]) to last revision by [[User:Impro|Impro]]

--- a/དཔལ་གྱི་དེའུའི་གྲོང་ཁྱེར་.mw
+++ b/དཔལ་གྱི་དེའུའི་གྲོང་ཁྱེར་.mw
@@ -1,1 +1,7 @@
+（ཡར་འབྲོག་དཔལ་དེའི་གྲོང་ཚོ་）དེང་སང་བོད་རང་སྐྱོང་ལྗོངས་ཁོངས་སྣ་དཀར་རྩེ་རྫོང་དཔལ་དེའི་ཆུས་ཡོད་ས། །<br />
+༼[[དུང་དཀར་ཚིག་མཛོད་ཆེན་མོ་]]༽ལས་བཏུས།<br />
 
+{{stub}}
+{{translate}}
+
+[[Category:དུང་དཀར་ཚིག་མཛོད་ཆེན་མོ་]]
