--- a/ཊོ་ཀི་ཡ.mw
+++ b/ཊོ་ཀི་ཡ.mw
@@ -1,1 +1,10 @@
+{{Translate}}
 
+[[File:Tokyo Montage 2015.jpg|thumb|ཊོ་ཀི་ཡ]]
+
+'''ཊོ་ཀི་ཡ''', [[ཇཱ་པཱན།]]།
+
+[[Category:གྲོང་􀮣]]
+[[Category:ཇཱ་པཱན]]
+
+{{Stub}}
