Reverted edits by [[Special:Contributions/113.249.63.95|113.249.63.95]] ([[User talk:113.249.63.95|talk]]) to last revision by [[User:Wolverène|Wolverène]]

--- a/༢༠༡༡.mw
+++ b/༢༠༡༡.mw
@@ -1,1 +1,17 @@
+'''༢༠༡༡''' (''2011'')
+== དབུ་ཁྲིད་ཀྱི་གོ་འཕང༌། ==
+* [[མི་དབང་རྒྱལཔོ།]] : [[འཇིགས་མེད་ཁེ་སར་རྣམ་རྒྱལ་དབང་ཕྱུག]]
+* [[སྲིད་བློན།]] :
 
+== བྱ་སྒོ། ==
+
+== སྐྱེ་ནི། ==
+
+== འཆི་བ། ==
+
+== ཁ་སྐོང༌། ==
+
+<center>[[༢༠༠༡]] [[༢༠༠༢]] [[༢༠༠༣]] [[༢༠༠༤]] [[༢༠༠༥]] [[༢༠༠༦]] [[༢༠༠༧]] [[༢༠༠༨]] [[༢༠༠༩]] [[༢༠༡༠]] '''༢༠༡༡''' [[༢༠༡༢]] [[༢༠༡༣]] [[༢༠༡༤]] [[༢༠༡༥]] [[༢༠༡༦]] [[༢༠༡༧]] [[༢༠༡༨]] [[༢༠༡༩]] [[༢༠༢༠]] [[༢༠༢༡]] </center>
+{{translate}}{{stub}}
+
+[[Category:ལོ་གྲངས]]
