--- a/༢༠༡༦.mw
+++ b/༢༠༡༦.mw
@@ -1,1 +1,21 @@
+== དབུ་ཁྲིད་ཀྱི་གོ་འཕང༌། ==
+* [[མི་དབང་རྒྱལཔོ།]] : [[འཇིགས་མེད་ཁེ་སར་རྣམ་རྒྱལ་དབང་ཕྱུག]]
+* [[སྲིད་བློན།]] : [[Tshering Tobgay]]
 
+== བྱ་སྒོ། ==
+l
+
+
+
+pookoij jknn jjhyubjn yj gtuwjg458ntgvrvetr vketgurtogte rtgroti rt
+
+
+
+hhinihuifvvbb jh
+
+== སྐྱེ་ནི། ==
+
+== འཆི་བ། ==
+
+== ཁ་སྐོང༌། ==
+{{translate}}{{stub}}
