*Empty MediaWiki Message*

--- a/ཇ་པཱན.mw
+++ b/ཇ་པཱན.mw
@@ -2,7 +2,7 @@
 
 ཇ་པན་གྱི་རྒྱལ་ཁབ་འདི་ཤར་ཨེ་ཤི་ཡ་ལུ་ཆགས་ཏི་ཡོད་མི་མཚོ་གླིང་གྱི་རྒྱལ་ཁབ་ཅིག་ཨིན༏
 [[File:Flag of Japan.svg|right|thumb]]
-[[File:Japan sea map.png|right|thumb]]
+[[File:Japan-CIA_WFB_Map.png|right|thumb]]
 
 
 
