*Empty MediaWiki Message*

--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -32,7 +32,7 @@
 |-
 | དངུལ་ || དངུལ་ཀྲམ (UTC)
 |-
-| Time zone<br />&nbsp; - Summer || UTC+0<br />UTC+0
+| Time zone || UTC+0
 |-
 | རྒྱལ་པོའི་བརྟན་བཞུགས། || [[འབྲུག་ཙན་དན་]]<br />[[File:National Anthem of Bhutan - Ђуг ѕе́нде (འབྲུག་ཙན་དན).oga]]
 |-
