--- a/བོད་སྐད།.mw
+++ b/བོད་སྐད།.mw
@@ -10,15 +10,15 @@
 
 {| cellpadding="8" style="font-size: large" 
 |- 
-|'''ཀ''' ka {{IPA|[ká/k’á]}} ||'''ཁ''' kha {{IPA|[kʰá/xá]}}||'''ག''' ga {{IPA|[ɡà/ɣà]}}||'''ང''' nga {{IPA|[ŋà]}}
+|'''<span style="color:#ff0000">ཀ</span>''' ka {{IPA|[ká/k’á]}} ||'''<span style="color:#00ff00">ཁ</span>''' kha {{IPA|[kʰá/xá]}}||'''<span style="color:#0000ff">ག</span>''' ga {{IPA|[ɡà/ɣà]}}||'''ང''' nga {{IPA|[ŋà]}}
 |-
-|'''ཅ''' tsja {{IPA|[tɕá/tɕ’á]}}||'''ཆ''' tsjha {{IPA|[tɕʰá/ɹ̥̆˔ʲá]}}||'''ཇ''' dzja {{IPA|[dʑà/ɹ̝̆ʲà]}}||'''ཉ''' nja {{IPA|[ɲà]}}
+|'''<span style="color:#ff0000">ཅ</span>''' tsja {{IPA|[tɕá/tɕ’á]}}||'''<span style="color:#00ff00">ཆ</span>''' tsjha {{IPA|[tɕʰá/ɹ̥̆˔ʲá]}}||'''<span style="color:#0000ff">ཇ</span>''' dzja {{IPA|[dʑà/ɹ̝̆ʲà]}}||'''ཉ''' nja {{IPA|[ɲà]}}
 |-
-|'''ཏ''' ta {{IPA|[tá/t’á]}}||'''ཐ''' tha {{IPA|[tʰá/ɹ̝̊á]}}||'''ད''' da {{IPA|[dà/ɹ̝à]}}||'''ན''' na {{IPA|[nà]}}
+|'''<span style="color:#ff0000">ཏ</span>''' ta {{IPA|[tá/t’á]}}||'''<span style="color:#00ff00">ཐ</span>''' tha {{IPA|[tʰá/ɹ̝̊á]}}||'''<span style="color:#0000ff">ད</span>''' da {{IPA|[dà/ɹ̝à]}}||'''ན''' na {{IPA|[nà]}}
 |-
-|'''པ''' pa {{IPA|[pá/p’á]}}||'''ཕ''' pha {{IPA|[pʰá/ɸá]}}||'''བ''' ba {{IPA|[bà/βà]}}||'''མ''' ma {{IPA|[mà]}}
+|'''<span style="color:#ff0000">པ</span>''' pa {{IPA|[pá/p’á]}}||'''<span style="color:#00ff00">ཕ</span>''' pha {{IPA|[pʰá/ɸá]}}||'''<span style="color:#0000ff">བ</span>''' ba {{IPA|[bà/βà]}}||'''མ''' ma {{IPA|[mà]}}
 |-
-|'''ཙ''' tsa {{IPA|[tsá/ts’á]}}||'''ཚ''' tsha {{IPA|[tsʰá/ɹ̥̆˔á]}}||'''ཛ''' dza {{IPA|[dzà/ɹ̝̆à]}}||'''ཝ''' wa {{IPA|[wà]}}
+|'''<span style="color:#ff0000">ཙ</span>''' tsa {{IPA|[tsá/ts’á]}}||'''<span style="color:#00ff00">ཚ</span>''' tsha {{IPA|[tsʰá/ɹ̥̆˔á]}}||'''<span style="color:#0000ff">ཛ</span>''' dza {{IPA|[dzà/ɹ̝̆à]}}||'''ཝ''' wa {{IPA|[wà]}}
 |-
 |'''ཞ''' zja {{IPA|[ʑà/ʑːà]}}||'''ཟ''' za {{IPA|[zà/zːà]}}||'''འ''' ‘a {{IPA|[ɦà/ɦːà]}}||'''ཡ''' ja {{IPA|[jà]}}
 |-
