--- a/བོད་སྐད།.mw
+++ b/བོད་སྐད།.mw
@@ -10,21 +10,21 @@
 
 {| cellpadding="8" style="font-size: large" 
 |- 
-|'''<span style="color:#0000ff">ཀ</span>''' ka {{IPA|[ká/k’á]}} ||'''<span style="color:#00ff00">ཁ</span>''' kha {{IPA|[kʰá/xá]}}||'''<span style="color:#ff0000">ག</span>''' ga {{IPA|[ɡà/ɣà]}}||'''ང''' nga {{IPA|[ŋà]}}
+|'''<span style="color:#0000ff">ཀ</span>''' ka {{IPA|[ká/k’á]}} ||'''<span style="color:#00ff00">ཁ</span>''' kha {{IPA|[kʰá/xá]}}||'''<span style="color:#ff0000">ག</span>''' ga {{IPA|[ɡà/ɣà]}}||'''<span style="color:#C0C0C0">ང</span>''' nga {{IPA|[ŋà]}}
 |-
-|'''<span style="color:#0000ff">ཅ</span>''' tsja {{IPA|[tɕá/tɕ’á]}}||'''<span style="color:#00ff00">ཆ</span>''' tsjha {{IPA|[tɕʰá/ɹ̥̆˔ʲá]}}||'''<span style="color:#ff0000">ཇ</span>''' dzja {{IPA|[dʑà/ɹ̝̆ʲà]}}||'''ཉ''' nja {{IPA|[ɲà]}}
+|'''<span style="color:#0000ff">ཅ</span>''' tsja {{IPA|[tɕá/tɕ’á]}}||'''<span style="color:#00ff00">ཆ</span>''' tsjha {{IPA|[tɕʰá/ɹ̥̆˔ʲá]}}||'''<span style="color:#ff0000">ཇ</span>''' dzja {{IPA|[dʑà/ɹ̝̆ʲà]}}||'''<span style="color:#C0C0C0">ཉ</span>''' nja {{IPA|[ɲà]}}
 |-
-|'''<span style="color:#0000ff">ཏ</span>''' ta {{IPA|[tá/t’á]}}||'''<span style="color:#00ff00">ཐ</span>''' tha {{IPA|[tʰá/ɹ̝̊á]}}||'''<span style="color:#ff0000">ད</span>''' da {{IPA|[dà/ɹ̝à]}}||'''ན''' na {{IPA|[nà]}}
+|'''<span style="color:#0000ff">ཏ</span>''' ta {{IPA|[tá/t’á]}}||'''<span style="color:#00ff00">ཐ</span>''' tha {{IPA|[tʰá/ɹ̝̊á]}}||'''<span style="color:#ff0000">ད</span>''' da {{IPA|[dà/ɹ̝à]}}||'''<span style="color:#C0C0C0">ན</span>''' na {{IPA|[nà]}}
 |-
-|'''<span style="color:#0000ff">པ</span>''' pa {{IPA|[pá/p’á]}}||'''<span style="color:#00ff00">ཕ</span>''' pha {{IPA|[pʰá/ɸá]}}||'''<span style="color:#ff0000">བ</span>''' ba {{IPA|[bà/βà]}}||'''མ''' ma {{IPA|[mà]}}
+|'''<span style="color:#0000ff">པ</span>''' pa {{IPA|[pá/p’á]}}||'''<span style="color:#00ff00">ཕ</span>''' pha {{IPA|[pʰá/ɸá]}}||'''<span style="color:#ff0000">བ</span>''' ba {{IPA|[bà/βà]}}||'''<span style="color:#C0C0C0">མ</span>''' ma {{IPA|[mà]}}
 |-
-|'''<span style="color:#0000ff">ཙ</span>''' tsa {{IPA|[tsá/ts’á]}}||'''<span style="color:#00ff00">ཚ</span>''' tsha {{IPA|[tsʰá/ɹ̥̆˔á]}}||'''<span style="color:#ff0000">ཛ</span>''' dza {{IPA|[dzà/ɹ̝̆à]}}||'''ཝ''' wa {{IPA|[wà]}}
+|'''<span style="color:#0000ff">ཙ</span>''' tsa {{IPA|[tsá/ts’á]}}||'''<span style="color:#00ff00">ཚ</span>''' tsha {{IPA|[tsʰá/ɹ̥̆˔á]}}||'''<span style="color:#ff0000">ཛ</span>''' dza {{IPA|[dzà/ɹ̝̆à]}}||'''<span style="color:#808080">ཝ</span>''' wa {{IPA|[wà]}}
 |-
-|'''ཞ''' zja {{IPA|[ʑà/ʑːà]}}||'''ཟ''' za {{IPA|[zà/zːà]}}||'''འ''' ‘a {{IPA|[ɦà/ɦːà]}}||'''ཡ''' ja {{IPA|[jà]}}
+|'''<span style="color:#ffff00">ཞ</span>''' zja {{IPA|[ʑà/ʑːà]}}||'''<span style="color:#ffff00">ཟ</span>''' za {{IPA|[zà/zːà]}}||'''<span style="color:#ffff00">འ</span>''' ‘a {{IPA|[ɦà/ɦːà]}}||'''<span style="color:#ffff00">ཡ</span>''' ja {{IPA|[jà]}}
 |-
-|'''ར''' ra {{IPA|[rà]}}||'''ལ''' la {{IPA|[là]}}||'''ཤ''' sja {{IPA|[ɕá]}}||'''ས''' sa {{IPA|[sá]}}
+|'''<span style="color:#00ffff">ར</span>''' ra {{IPA|[rà]}}||'''<span style="color:#00ffff">ལ</span>''' la {{IPA|[là]}}||'''<span style="color:#00ffff">ཤ</span>''' sja {{IPA|[ɕá]}}||'''<span style="color:#00ffff">ས</span>''' sa {{IPA|[sá]}}
 |-
-|'''ཧ''' ha {{IPA|[há]}}||'''ཨ''' ’a {{IPA|[ʔá]}}
+|'''<span style="color:#ff00ff">ཧ</span>''' ha {{IPA|[há]}}||'''<span style="color:#ff00ff">ཨ</span>''' ’a {{IPA|[ʔá]}}
 |}
 
 ==བོད་སྐད་ཀྱི་ཁྱབ་ཁོངས།==
