/* གསལ་བྱེད། */Pikachu Eevee

--- a/བོད་སྐད།.mw
+++ b/བོད་སྐད།.mw
@@ -20,11 +20,11 @@
 |-
 |'''<span style="color:#0000ff">ཙ</span>''' tsa {{IPA|[tsá/ts’á]}}||'''<span style="color:#00ff00">ཚ</span>''' tsha {{IPA|[tsʰá/ɹ̥̆˔á]}}||'''<span style="color:#ff0000">ཛ</span>''' dza {{IPA|[dzà/ɹ̝̆à]}}||'''<span style="color:#808080">ཝ</span>''' wa {{IPA|[wà]}}
 |-
-|'''<span style="color:#ffff00">ཞ</span>''' zja {{IPA|[ʑà/ʑːà]}}||'''<span style="color:#ffff00">ཟ</span>''' za {{IPA|[zà/zːà]}}||'''<span style="color:#ffff00">འ</span>''' ‘a {{IPA|[ɦà/ɦːà]}}||'''<span style="color:#ffff00">ཡ</span>''' ja {{IPA|[jà]}}
+|'''<span style="color:#ff00ff">ཞ</span>''' zja {{IPA|[ʑà/ʑːà]}}||'''<span style="color:#ff00ff">ཟ</span>''' za {{IPA|[zà/zːà]}}||'''<span style="color:#ff00ff">འ</span>''' ‘a {{IPA|[ɦà/ɦːà]}}||'''<span style="color:#ff00ff">ཡ</span>''' ja {{IPA|[jà]}}
 |-
 |'''<span style="color:#00ffff">ར</span>''' ra {{IPA|[rà]}}||'''<span style="color:#00ffff">ལ</span>''' la {{IPA|[là]}}||'''<span style="color:#00ffff">ཤ</span>''' sja {{IPA|[ɕá]}}||'''<span style="color:#00ffff">ས</span>''' sa {{IPA|[sá]}}
 |-
-|'''<span style="color:#ff00ff">ཧ</span>''' ha {{IPA|[há]}}||'''<span style="color:#ff00ff">ཨ</span>''' ’a {{IPA|[ʔá]}}
+|'''<span style="color:#ffff00">ཧ</span>''' ha {{IPA|[há]}}||'''<span style="color:#ffff00">ཨ</span>''' ’a {{IPA|[ʔá]}}
 |}
 
 ==བོད་སྐད་ཀྱི་ཁྱབ་ཁོངས།==
