*Empty MediaWiki Message*

--- a/བོད་སྐད།.mw
+++ b/བོད་སྐད།.mw
@@ -1,5 +1,7 @@
 '''བོད་སྐད་'''ནི་[[བོད་ཡུལ་]]དུ་བེད་སྤྱོད་བྱེད་པའི་སྐད་དེ། སྤྱིར་རོང་འབྲོག་གཉིས་ལས་འབྲོག་པའི་སྐད་ནི་འབྲོག་སྡེ་སྟོད་སྨད་བར་གསུམ་ཀུན་ཏུ་ཁྱད་པར་མེད་ཅིང་། སྒྲ་གདངས་དྲག་ཅིང་གྱོང་ཉམས་ཆེ་ལ་སྔོན་གྱི་སྒྲ་སྦྱོར་གྱི་ཟུར་མ་ཉམས་པར་ཐོན་པ་དང་། ཞིང་སྡེའི་ཡུལ་ལུང་རྣམས་སུ་སྐད་ཀྱི་ཁྱད་པར་སྣ་ཚོགས་ཡོད་པས་གདངས་འདོན་ཚུལ་སོགས་གཅིག་ཏུ་མ་ངེས། ད་ཆར་ཡོངས་གྲགས་སུ་བོད་ཀྱི་ཡུལ་གྲུ་སྟོད་སྨད་བར་གསུམ་ལ་ལྟོས་ཏེ་ནང་གསེས་རིགས་གསུམ་དུ་ཕྱེ་བ་སྟེ། སྟོད་དབུས་གཙང་གི་སྐད་དང་། བར་ཁམས་པའི་སྐད་དང་། སྨད་ཨ་མདོའི་སྐད་རྣམས་སོ། བོད་སྐད་ནི་ཧོར་སོག་ལ་སོགས་པ་གྲངས་ཉུང་མི་རིགས་གཞན་པ་ཁག་ཅིག་གིས་བེད་སྤྱོད་གཏོང་བཞིན་ཡོད་པར་མ་ཟད། བལ་པོ་དང་། འབྲས་ལྗོངས། འབྲུག་ཡུལ་བཅས་ཀྱི་རྒྱལ་ཁབ་རྣམས་སུའང་བེད་སྤྱོད་གཏོང་བཞིན་ཡོད།
 
+[[བོད།|བོད]]་[[སྐད]]་ནི་ཧི་མ་ལ་ཡའི་ཡུལ་གྲུའི་མི་རྣམས་ཀྱིས་སྤྱོད་པའི་སྐད་ཡིག་ཅིག་ལ། དེང་སང་སྤྱི་ཁྱབ་སྒྲའི་འདོན་སྟངས་ཀྱི་ཁྱད་པར་ཡོད་པ་ཙམ་མ་གཏོགས། རྒྱ་ནག་གི་འོག་ཏུ་ཡོད་པའི་བོད་ཁུལ་ཡོངས་དང་། འབྲུག་དང་འབྲས་ལྗོངས། ལ་དྭགས་དང་བལ་ཡུལ་སོགས་ཚུད་པའི་ཧི་མ་ལ་ཡའི་སྤྱི་མཐུན་གྱི་སྤྱི་སྐད་ཁོ་ན་དེ་ཡིན་ལ་ཨེ་ཤ་ཡའི་རླབས་ཆེན་སྐད་ཡིག་ཅིག་ཀྱང་ཡིན། འདི་ནི་ཧི་མ་ལ་ཡའི་རིག་གཞུང་ཀུན་གྱི་ཕྲེང་ཐག་ལྟ་བུ་ཡིན། འབྲུག་པ་སོགས་སྙིང་ཆུང་ཆུང་སྡར་མ་འགའ་རེ་རྒྱ་མིར་སྐྲག་སྟེ། རང་ཉིད་ཀྱི་སྐད་ཡིག་དེ་བོད་ཀྱི་སྐད་ཡིག་ཁོངས་སུ་མི་གཏོགས་རབས་བརྗོད་མོད། འོན་ཀྱང་། དེ་ནི་མིག་ཅན་གྱིས་གཟུགས་ཅན་ལ་བལྟ་བ་ཡིན་པས་རྣམ་དཔྱོད་ལྡན་པ་དག་གིས་བལྟས་པ་དང་ཀློག་པ་ཙམ་གྱིས་ཤེས་ནུས། ད་དུང་འབྲུག་རྒན་སྡར་མ་དེ་ཚོས་བོད་ཀྱི་སྐད་ཡིག་གསེར་ལྟ་བུ་འདྲ་བོ་དེར་ཧིན་སྐད་དང་བལ་སྐད། དེ་བཞིན་དབྱིན་སྐད་སོགས་ཀྱིས་བསྲེས་ལྷད་ཅུང་ཙམ་བརྒྱབ་རྗེས་སྐད་ཡིག་འདིའི་མིང་ལ་རྫོང་ཁ་ཟེར་བ་ལས་བོད་སྐད་ཡིག་མི་ཟེར་ཅེས། མཛེ་བོ་རང་སྣང་མཐོ་བ་ལྟ་བུར་བླུན་པོ་གཅེར་རྒྱུག་བྱེད་པ་ནི་འགྲོ་བ་མིའི་རིགས་དང་ཁྱད་པར་དུ་ཧི་མ་ལ་ཡའི་རིག་གཞུང་གིས་ཟིན་པའི་སྐྱེ་འགྲོ་ཡོངས་ཀྱི་གྱོང་གུན་རེད་དོ། །
+
 == ལོ་རྒྱུས། ==
 
 == ས་ཁམས། ==
@@ -92,4 +94,9 @@
 *H. A. Jäschke 2003 [http://books.google.com/books?id=cFTVmipjOC0C&printsec=frontcover&source=gbs_ge_summary_r&cad=0#v=onepage&q&f=false ''Tibetan-English Dictionary''] Courier Dover Publications
 *H. A. Jäschke 2004 [http://books.google.com/books?id=POgoZBYrbfEC&printsec=frontcover&source=gbs_ge_summary_r&cad=0#v=onepage&q&f=false ''Tibetan-English Dictionary''] Routledge
 
+
+{{translate}}
+
 [[Category:བོད་སྐད།]]
+[[Category:བོད་ཡིག]]
+[[Category:བོད]]
