--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -70,6 +70,7 @@
 |- bgcolor="#FFEEC2"
 |align="center"|   ||align="center"|   ||align="center"|   ||align="center"| [[བསམ་གྲུབ་ལྗོངས་མཁར་རྫོང་ཁག]]
 |}
+[[File:Bhutan-Paro-138-Taktshang-Tigernest-gje.jpg|thumb|upright=1.0|Taktshang]]
 
 == འབྲུག་ཡུལ་གྱི་ཡུལ་ཁག ==
 * [[ཀྲོང་གསར་]]
