*Empty MediaWiki Message*

--- a/ཐིམ་ཕུག།.mw
+++ b/ཐིམ་ཕུག།.mw
@@ -3,7 +3,7 @@
 
 '''ཐིམ་ཕུ''' གྲོང་􀮣 [[ཐིམ་ཕུ་རྫོང་ཁག]] [[འབྲུག་ཡུལ་]]
 
-( 27.48°N 89.7°E - BTTHI )
+( 27.48°N 89.7°E - Thimphu, BTTHI )
 
 ཐིམ་ཕུག་འདི་ འབྲུག་གི་རྒྱལ་ས་ལྟེ་བ་དང་ ང་བཅས་རའི་སྐུ་འཁོར་དང་བློན་པོ་ལྷན་རྒྱས་ དེ་ལས་ ཕྱི་རྒྱལ་སྐུ་ཚབ་ཚུ་བཞུགས་ས་དང་ གོང་འཕེལ་ཅན་གྱི་ལས་འགུལ་ཚུ་ ཁག་འབག་སའི་ཁྲོམ་ཚོགས་སྦོམ་ཤོས་ཅིག་ཨིན།
 
