--- a/བོད་སྐད།.mw
+++ b/བོད་སྐད།.mw
@@ -12,21 +12,21 @@
 
 {| cellpadding="8" style="font-size: large" 
 |- 
-|'''<span style="color:#0000ff">ཀ</span>''' ka {{IPA|[ká/k’á]}} ||'''<span style="color:#00ff00">ཁ</span>''' kha {{IPA|[kʰá/xá]}}||'''<span style="color:#ff0000">ག</span>''' ga {{IPA|[ɡà/ɣà]}}||'''<span style="color:#C0C0C0">ང</span>''' nga {{IPA|[ŋà]}}
+|'''<span style="color:#0000ff">ཀ</span>''' {{IPA|[ka]}} ||'''<span style="color:#00ff00">ཁ</span>''' {{IPA|[kːa]}}||'''<span style="color:#ff0000">ག</span>''' {{IPA|[ɡa]}}||'''<span style="color:#C0C0C0">ང</span>''' {{IPA|[ŋa]}}
 |-
-|'''<span style="color:#0000ff">ཅ</span>''' tsja {{IPA|[tɕá/tɕ’á]}}||'''<span style="color:#00ff00">ཆ</span>''' tsjha {{IPA|[tɕʰá/ɹ̥̆˔ʲá]}}||'''<span style="color:#ff0000">ཇ</span>''' dzja {{IPA|[dʑà/ɹ̝̆ʲà]}}||'''<span style="color:#C0C0C0">ཉ</span>''' nja {{IPA|[ɲà]}}
+|'''<span style="color:#0000ff">ཅ</span>''' {{IPA|[tɕa]}}||'''<span style="color:#00ff00">ཆ</span>''' {{IPA|[tɕːa]}}||'''<span style="color:#ff0000">ཇ</span>''' {{IPA|[dʑa]}}||'''<span style="color:#C0C0C0">ཉ</span>''' {{IPA|[ɲa]}}
 |-
-|'''<span style="color:#0000ff">ཏ</span>''' ta {{IPA|[tá/t’á]}}||'''<span style="color:#00ff00">ཐ</span>''' tha {{IPA|[tʰá/ɹ̝̊á]}}||'''<span style="color:#ff0000">ད</span>''' da {{IPA|[dà/ɹ̝à]}}||'''<span style="color:#C0C0C0">ན</span>''' na {{IPA|[nà]}}
+|'''<span style="color:#0000ff">ཏ</span>''' {{IPA|[ta]}}||'''<span style="color:#00ff00">ཐ</span>''' {{IPA|[tːa]}}||'''<span style="color:#ff0000">ད</span>''' {{IPA|[da]}}||'''<span style="color:#C0C0C0">ན</span>''' {{IPA|[na]}}
 |-
-|'''<span style="color:#0000ff">པ</span>''' pa {{IPA|[pá/p’á]}}||'''<span style="color:#00ff00">ཕ</span>''' pha {{IPA|[pʰá/ɸá]}}||'''<span style="color:#ff0000">བ</span>''' ba {{IPA|[bà/βà]}}||'''<span style="color:#C0C0C0">མ</span>''' ma {{IPA|[mà]}}
+|'''<span style="color:#0000ff">པ</span>''' {{IPA|[pa]}}||'''<span style="color:#00ff00">ཕ</span>''' {{IPA|[pːa]}}||'''<span style="color:#ff0000">བ</span>''' {{IPA|[ba]}}||'''<span style="color:#C0C0C0">མ</span>''' {{IPA|[ma]}}
 |-
-|'''<span style="color:#0000ff">ཙ</span>''' tsa {{IPA|[tsá/ts’á]}}||'''<span style="color:#00ff00">ཚ</span>''' tsha {{IPA|[tsʰá/ɹ̥̆˔á]}}||'''<span style="color:#ff0000">ཛ</span>''' dza {{IPA|[dzà/ɹ̝̆à]}}||'''<span style="color:#808080">ཝ</span>''' wa {{IPA|[wà]}}
+|'''<span style="color:#0000ff">ཙ</span>''' {{IPA|[tsa]}}||'''<span style="color:#00ff00">ཚ</span>''' {{IPA|[tsːa]}}||'''<span style="color:#ff0000">ཛ</span>''' {{IPA|[dza]}}||'''<span style="color:#808080">ཝ</span>''' {{IPA|[wa]}}
 |-
-|'''<span style="color:#ff00ff">ཞ</span>''' zja {{IPA|[ʑà/ʑːà]}}||'''<span style="color:#ff00ff">ཟ</span>''' za {{IPA|[zà/zːà]}}||'''<span style="color:#ff00ff">འ</span>''' ‘a {{IPA|[ɦà/ɦːà]}}||'''<span style="color:#ff00ff">ཡ</span>''' ja {{IPA|[jà]}}
+|'''<span style="color:#ff00ff">ཞ</span>''' {{IPA|[ʑa]}}||'''<span style="color:#ff00ff">ཟ</span>''' {{IPA|[za]}}||'''<span style="color:#ff00ff">འ</span>''' {{IPA|[ʢa]}}||'''<span style="color:#ff00ff">ཡ</span>''' {{IPA|[ja]}}
 |-
-|'''<span style="color:#00ffff">ར</span>''' ra {{IPA|[rà]}}||'''<span style="color:#00ffff">ལ</span>''' la {{IPA|[là]}}||'''<span style="color:#00ffff">ཤ</span>''' sja {{IPA|[ɕá]}}||'''<span style="color:#00ffff">ས</span>''' sa {{IPA|[sá]}}
+|'''<span style="color:#00ffff">ར</span>''' {{IPA|[ra]}}||'''<span style="color:#00ffff">ལ</span>''' {{IPA|[la]}}||'''<span style="color:#00ffff">ཤ</span>''' {{IPA|[ɕa]}}||'''<span style="color:#00ffff">ས</span>''' {{IPA|[sa]}}
 |-
-|'''<span style="color:#ffff00">ཧ</span>''' ha {{IPA|[há]}}||'''<span style="color:#ffff00">ཨ</span>''' ’a {{IPA|[ʔá]}}
+|'''<span style="color:#ffff00">ཧ</span>''' {{IPA|[ʜa]}}||'''<span style="color:#ffff00">ཨ</span>''' {{IPA|[a]}}
 |}
 
 ==བོད་སྐད་ཀྱི་ཁྱབ་ཁོངས།==
