*Empty MediaWiki Message*

--- a/སྒང་སྟེང་གསང་སྔགས་ཆོས་གླིང་.mw
+++ b/སྒང་སྟེང་གསང་སྔགས་ཆོས་གླིང་.mw
@@ -1,4 +1,4 @@
-[[File:Main Temple Gangte Goemba.jpg|thumb|]]
+[[File:Gangteng monastery 2019-08-23 b.jpg|thumb|]]
 དཔལ་སྒང་སྟེང་གསང་སྔགས་ཆོས་གླིང་གི་གཙུག་ལག་ཁང་འདི་ གཏེར་སྟོན་པདྨ་གླིང་པའི་ཞལ་སློབ་ རྟོགས་པ་རང་དང་མཉམ་པ་ འདུལ་འཛིན་དམ་པ་མཁན་ཆེན་ཚུལ་ཁྲིམས་དཔལ་འབྱོར་གྱི་སྐུ་སྐྱེས་ པདྨ་གླིང་པའི་གདུང་འཛིན་ཐུགས་སྲས་ཟླ་བ་རྒྱལ་མཚན་གྱི་སྲས་སྦེ་འཁྲུངས་མི་ སྒང་སྟེང་སྤྲུལ་སྐུ་སྐུ་ཕྲེང་དང་པ་རྒྱལ་སྲས་པདྨ་ཕྲིན་ལས་མཆོག་གིས་ སྔོན་བྱོན་རྒྱལ་བ་གོང་མའི་ལུང་བསྟན་དང་འཁྲིལ་ཏེ་ ཕྱག་བཏབ་གནང་གནངམ་ཨིན་མས། 
 
 དེ་ཡང་ གཏེར་སྟོན་གྱི་རྒྱལ་པོ་རིག་འཛིན་པདྨ་གླིང་པ་མཆོག་ ཕོབ་སྦྱིས་ཁ་ལུ་བྱོན་པའི་དུས་སྐབས་ཅིག་ལུ་ གཡུས་གསར་ལས་ཞལ་ཡར་བསྒོར་ཞིན་ན་ ད་ལྟོ་ལྷ་ཁང་ཡོད་ས་ཁ་ཐུག་ཕྱག་མཛུབས་དཔགས་སྦེ་ ''མ་འོངས་པ་ནང་ཨ་ཡི་སྒང་ཏོག་གུ་ལས་ ངེའི་གསང་སྔགས་ཀྱི་བསྟན་པ་དར་ཞིང་རྒྱས་འོང་'' ཟེར་ལུང་བསྟན་གནང་ཡོདཔ་ཨིན་མས། དེ་བཟུམ་སྦེ་ པདྨ་གླིང་པའི་སྤྲུལ་སྐུ་ གསུང་སྤྲུལ་རྒྱལ་དབང་བསྟན་འཛིན་གྲགས་པ་མཆོག་གིས་ཡང་ ས་གནས་དེ་ཁར་མཚམས་ཁང་ཆུང་ཀུ་ཅིག་རྐྱབ་སྟེ་སྐུ་མཚམས་གནང་བཞུགས་པའི་ཤུལ་ལུ་ མཚམས་ཁང་དེ་རྒྱལ་སྲས་སྤྲུལ་སྐུ་ལུ་རྩིས་སྤྲོད་གནངམ་དང་གཅིག་ཁར་ ''ཁྱོད་ཀྱིས་ས་གནས་འདི་ཁར་གདན་ས་བཅགས་ཏེ་ པདྨ་གླིང་པའི་རྣམ་ཐར་གསོལ་འདེབས་ཁ་ཐུན་སྦེ་གཏང་མི་ཡོདཔ་ཅིག་བཟོ་སྨ་རེད། ཤུལ་ལས་ས་གནས་དེ་ཁ་ལས་ པད་གླིང་གི་བསྟན་པ་དར་ཞིང་རྒྱས་ནི་གི་རྟེན་འབྲེལ་ཡོད་'' ཟེར་བའི་ལུང་བསྟན་གསུངས་ནུག། 
