--- a/རྫོང་ཁ་.mw
+++ b/རྫོང་ཁ་.mw
@@ -1,15 +1,39 @@
-རྫོང་ཁ།
-འབྲུག་ཡུལ།
+== སྔོ་སྤྲོད། ==
+འབྲུག་རྒྱལ་ཁབ་འདི་ ཕྱི་སྣོད་སའི་རྒྱ་ཚད་ཆུང་རུང་ ཁ་སྐད་མ་འདྲཝ་ ༡༩ ལྷགཔ་ཅིག་ཡོད་པའི་ ཁ་སྐད་ཀྱིས་ཕྱུག་པའི་རྒྱལ་ཁབ་ཅིག་ཨིན། ཁ་སྐད་དེ་ཚུའི་ནང་ལས་ རྫོང་ཁ་འདི་ དུས་རབས་ ༡༢ དེ་ཅིག་ལས་ར་ དཔོན་གྱི་སྒོ་ཁ་དང་དམག་སྡེའི་དྲག་གྲས། ཤེས་ཡོན་ཅན་གྱི་མི་བརྒྱུད། གཞུང་སྐྱོང་དང་བདག་སྐྱོང་ཚུ་གི་ཁ་སྐད་ཅིག་སྦེ་ལག་ལེན་འཐབ་སྟེ་སྡོད་ནུག ཨིན་རུང་ གཞུང་འབྲེལ་ཡི་གུ་དང་ ཁྲིམས་འབྲེལ་ཡིག་ཆ་ཚུ་ག་ར་ ཆོས་སྐད་ཀྱི་ཐོག་ལུ་བྲིས་ཏེ་སྡོད་ནུག དེ་ལས་ སྤྱི་ལོ་ ༡༩༧༡ ལུ་ མི་དབང་འབྲུག་རྒྱལ་གསུམ་པ་ དཔལ་འཇིགས་མེད་རྡོ་རྗེ་དབང་ཕྱུག་མཆོག་གིས་ རྫོང་ཁ་འདི་ འབྲུག་གི་རྒྱལ་ཡོངས་སྐད་ཡིག་སྦེ་གསལ་བསྒྲགས་མཛད་གནང་ནུག དེ་དང་གཅིག་ཁར་ རྫོང་ཁ་ལྷབ་སྦྱང་གི་དཔེ་དེབ་ཚུ་འབྲི་ནི་དང་པར་སྐྲུན་འབད་ནིའི་དོན་ལུ་ ཤེས་རིག་ལྷན་ཁག་འོག་ལུ་ རྫོང་ཁ་གོང་འཕེལ་སྡེ་ཚན་ཅིག་ཡང་གཞི་བཙུགས་གནང་སྟེ་ སློབ་གྲྭ་ཁག་ལས་ཕར་ རྫོང་ཁ་འདི་ སྐད་ཡིག་དང་རྩོམ་རིག་གི་གྲས་ཁར་ སློབ་སྟོན་གྱི་ཆོས་ཚན་ཅིག་སྦེ་འགོ་བཙུགས་གནང་ནུག།
 
-འབྲུག་རྒྱལ་ཁབ་འདི་ སྐད་ཡིག་སྣ་ཚོགས་ཡོད་པའི་སྤྱི་ཚོགས་ཅིག་ཨིན། [[རྒྱལ་ཁབ་ནང་འཁོད་ལུ་]] སྐད་རིགས་མ་འདྲཝ་ ༡༩ དེ་ཅིག་སླབ་སྲོལ་ཡོད་དེ་འབད་རུང་ རྒྱལ་ཡོངས་ཀྱི་ སྐད་ཡིག་འདི་རྫོང་ཁ་ཨིན། ཧེ་མ་འབད་བ་ཅིན་ རྫོང་ཁ་དེ་ རྫོང་ན་ལུ་ [[ལཱ་འབད་མི་ཚུ་གིས་]] ལག་ལེན་འཐབ་ཨིན་རུང་ ཤུལ་ལས་ བརྡ་སྤྲོད་ཀྱི་དོན་ལུ་ ཁག་ཆེཝ་ཨིནམ་ཤེས་ཞིནམ་ལས་ རྫོང་ཁ་འདི་ [[རྒྱལ་ཡོངས་སྐད་ཡིག་སྦེ་]] ཆ་འཇོག་འབད་ནུག།
+*[[རྫོང་ཁ་གོང་འཕེལ་ལྷན་ཚོགས]]
+*[[རྫོང་ཁའི་ལྡེ་སྒྲོམ་]]
 
-* [[རྫོང་ཁ་གོང་འཕེལ་ལྷན་ཚོགས]]
-* [[རྫོང་ཁའི་ལྡེ་སྒྲོམ་]]
+== འབྲི་ཐངས་ལམ་ལུགས། ==
+རྫོང་ཁ་འདི་ བོད་སྐད་ཡི་ གསལ་བྱེད་ལག་ལེན་ཐབ་དོ་ཡོདཔ་ཨིན། ཨིན་རུང་ འབྲི་བའི་སྐབས་ སྔོན་མ་ལས་ཡོད་པའི་ ཡི་་གུའི་འཟོ་རྣམ་ ''ཚུག་ཡིག་''  ཟེར་མི་འདི་ལག་ལེན་ཐབ་དོ་ཡོདཔ་ཨིན།
+
+=== གསལ་བྱེད་གསུམ་བཅུ། ===
+ཀ་ ཁ་ ག་ ང་། ཅ་ ཆ་ ཇ་ ཉ། ཏ་ ཐ་ ད་ ན། པ་ ཕ་ བ་ མ། ཙ་ ཚ་ ཛ་ ཝ། ཞ་ ཟ་ འ་ ཡ། ར་ ལ་ ཤ་ ས། ཧ་ ཨ།
+
+=== དབྱངས་བཞི། ===
+ཨི་ ཨུ་ ཨེ་ ཨོ
+
+== རྗོད་སྒྲ། ==
+<br />
+
+== དཔེ་ཡིག། ==
+༄༅ །། ཨ་ཡིག་དཀར་འཛོད་འཁྲུངས་བཤད་བློའི་གཏེར།།
+
+
+
+
+
+
+
+
+
+
+
 
 == འབྲེལ་མཐུད ==
 
 === མིང་ཚིག ===
-* [http://www.dzongkha.gov.bt/online/onlinedictionary.php རྫོང་ཁའི་ཚིག་མཛོད།] <small>( རྫོང་ཁ - ཨིང་ལིཤ ། ཨིང་ལིཤ - རྫོང་ཁ ། རྫོང་ཁ - རྫོང་ཁ )</small> ། [http://www.dzongkha.gov.bt/online/dictionaries/dz-en-dict/index.html རྫོང་ཁ་ཨིང་ལིཤ་ཤན་སྦྱར་ཚིག་མཛོད།] <small>( རྫོང་ཁ - ཨིང་ལིཤ )</small> - [[རྫོང་ཁ་གོང་འཕེལ་ལྷན་ཚོགས]] <small>( [http://www.dzongkha.gov.bt/index.en.php ཨིང་ལིཤ] - [http://www.dzongkha.gov.bt/ རྫོང་ཁ] )</small> 
+* [http://www.dzongkha.gov.bt/online/onlinedictionary.php རྫོང་ཁའི་ཚིག་མཛོད།] <small>( རྫོང་ཁ - ཨིང་ལིཤ ། ཨིང་ལིཤ - རྫོང་ཁ ། རྫོང་ཁ - རྫོང་ཁ )</small> ། [http://www.dzongkha.gov.bt/online/dictionaries/dz-en-dict/index.html རྫོང་ཁ་ཨིང་ལིཤ་ཤན་སྦྱར་ཚིག་མཛོད།] <small>( རྫོང་ཁ - ཨིང་ལིཤ )</small> - [[རྫོང་ཁ་གོང་འཕེལ་ལྷན་ཚོགས]] <small>( [http://www.dzongkha.gov.bt/index.en.php ཨིང་ལིཤ] - [http://www.dzongkha.gov.bt/ རྫོང་ཁ] )</small>
 * [http://www.panl10n.net/english/outputs/DCT.pdf རྫོང་ཁ་གློག་རིག་གི་མིང་ཚིག་ཚུ་]<small>(pdf)</small> <small>( ཨིང་ལིཤ - རྫོང་ཁ )</small>
 * [http://www.dzongkha.gov.bt/publications/PDF-publications/English-Dzongkha_Pocket_Dictionary.pdf ཨིང་ལིཤ་རྫོང་ཁ་ཤན་སྦྱར་དེབ་ཆུང་ཚིག་མཛོད།]<small>(pdf)</small> <small>( ཨིང་ལིཤ - རྫོང་ཁ )</small>
 * [http://www.dzongkha.gov.bt/publications/PDF-publications/Rigpai_Lodap.pdf འབྲིང་རིམ་རྫོང་ཁ་ཨིང་རིཤ་ཚིག་མཛོད༌རིག༌པའི༌ལོ༌འདབ།]<small>(pdf)</small> <small>( རྫོང་ཁ - ཨིང་ལིཤ )</small>
