--- a/རྫོང་ཁ་.mw
+++ b/རྫོང་ཁ་.mw
@@ -17,18 +17,11 @@
 <br />
 
 == དཔེ་ཡིག། ==
-༄༅ །། ཨ་ཡིག་དཀར་འཛོད་འཁྲུངས་བཤད་བློའི་གཏེར།།
 
-
-
-
-
-
-
-
-
-
-
+༄༅ །། ཨ་ཡིག་དཀར་མཛེས་ལས་འཁྲུངས་ཤེས་བློའི་གཏེར།།
+        ཕས་རྒོལ་ཝ་སྐྱེས་གཟིལ་གནོན་གདོང་ལྔ་བཞིན།།
+        ཆགས་ཐོགས་ཀུན་འབྲེལ་མཚུངས་མེད་འཇམ་དབྱངས་མཐུས།།
+        མ་གཱམ་མཁས་པའི་གཙོ་བོ་ཉིད་གྱུར་ཅིག།
 
 == འབྲེལ་མཐུད ==
 
