--- a/བོད་སྐད།.mw
+++ b/བོད་སྐད།.mw
@@ -12,21 +12,21 @@
 
 {| cellpadding="8" style="font-size: large" 
 |- 
-|'''<span style="color:#0000ff">ཀ</span>''' {{IPA|[ˈká]}} ||'''<span style="color:#00ff00">ཁ</span>''' {{IPA|[ˌkʰá]}}||'''<span style="color:#ff0000">ག</span>''' {{IPA|[ˈɡà]}}||'''<span style="color:#C0C0C0">ང</span>''' {{IPA|[ˈŋà]}}
+|'''<span style="color:#0000ff">ཀ</span>''' {{IPA|[ka]}} ||'''<span style="color:#00ff00">ཁ</span>''' {{IPA|[ᵑɡa]}}||'''<span style="color:#ff0000">ག</span>''' {{IPA|[ɡa]}}||'''<span style="color:#C0C0C0">ང</span>''' {{IPA|[ŋa]}}
 |-
-|'''<span style="color:#0000ff">ཅ</span>''' {{IPA|[ˈtɕá]}}||'''<span style="color:#00ff00">ཆ</span>''' {{IPA|[ˌtɕʰá]}}||'''<span style="color:#ff0000">ཇ</span>''' {{IPA|[ˈdʑà]}}||'''<span style="color:#C0C0C0">ཉ</span>''' {{IPA|[ˈɲà]}}
+|'''<span style="color:#0000ff">ཅ</span>''' {{IPA|[tɕa]}}||'''<span style="color:#00ff00">ཆ</span>''' {{IPA|[ⁿdʑa]}}||'''<span style="color:#ff0000">ཇ</span>''' {{IPA|[dʑa]}}||'''<span style="color:#C0C0C0">ཉ</span>''' {{IPA|[ɲa]}}
 |-
-|'''<span style="color:#0000ff">ཏ</span>''' {{IPA|[ˈtá]}}||'''<span style="color:#00ff00">ཐ</span>''' {{IPA|[ˌtʰá]}}||'''<span style="color:#ff0000">ད</span>''' {{IPA|[ˈdà]}}||'''<span style="color:#C0C0C0">ན</span>''' {{IPA|[ˈnà]}}
+|'''<span style="color:#0000ff">ཏ</span>''' {{IPA|[ta]}}||'''<span style="color:#00ff00">ཐ</span>''' {{IPA|[ⁿda]}}||'''<span style="color:#ff0000">ད</span>''' {{IPA|[da]}}||'''<span style="color:#C0C0C0">ན</span>''' {{IPA|[na]}}
 |-
-|'''<span style="color:#0000ff">པ</span>''' {{IPA|[ˈpá]}}||'''<span style="color:#00ff00">ཕ</span>''' {{IPA|[ˌpʰá]}}||'''<span style="color:#ff0000">བ</span>''' {{IPA|[ˈbà]}}||'''<span style="color:#C0C0C0">མ</span>''' {{IPA|[ˈmà]}}
+|'''<span style="color:#0000ff">པ</span>''' {{IPA|[pa]}}||'''<span style="color:#00ff00">ཕ</span>''' {{IPA|[ᵐba]}}||'''<span style="color:#ff0000">བ</span>''' {{IPA|[ba]}}||'''<span style="color:#C0C0C0">མ</span>''' {{IPA|[ma]}}
 |-
-|'''<span style="color:#0000ff">ཙ</span>''' {{IPA|[ˈtsá]}}||'''<span style="color:#00ff00">ཚ</span>''' {{IPA|[ˌtsʰá]}}||'''<span style="color:#ff0000">ཛ</span>''' {{IPA|[ˈdzà]}}||'''<span style="color:#808080">ཝ</span>''' {{IPA|[ˈwà]}}
+|'''<span style="color:#0000ff">ཙ</span>''' {{IPA|[tsa]}}||'''<span style="color:#00ff00">ཚ</span>''' {{IPA|[ⁿdza]}}||'''<span style="color:#ff0000">ཛ</span>''' {{IPA|[dza]}}||'''<span style="color:#808080">ཝ</span>''' {{IPA|[wa]}}
 |-
-|'''<span style="color:#ff00ff">ཞ</span>''' {{IPA|[ˈʑà]}}||'''<span style="color:#ff00ff">ཟ</span>''' {{IPA|[ˈzà]}}||'''<span style="color:#ff00ff">འ</span>''' {{IPA|[ˈà]}}||'''<span style="color:#ff00ff">ཡ</span>''' {{IPA|[ˈjà]}}
+|'''<span style="color:#ff00ff">ཞ</span>''' {{IPA|[ʑa]}}||'''<span style="color:#ff00ff">ཟ</span>''' {{IPA|[za]}}||'''<span style="color:#ff00ff">འ</span>''' {{IPA|[a]}}||'''<span style="color:#ff00ff">ཡ</span>''' {{IPA|[ja]}}
 |-
-|'''<span style="color:#00ffff">ར</span>''' {{IPA|[ˈrà]}}||'''<span style="color:#00ffff">ལ</span>''' {{IPA|[ˈlà]}}||'''<span style="color:#00ffff">ཤ</span>''' {{IPA|[ˈɕà]}}||'''<span style="color:#00ffff">ས</span>''' {{IPA|[ˈsà]}}
+|'''<span style="color:#00ffff">ར</span>''' {{IPA|[ra]}}||'''<span style="color:#00ffff">ལ</span>''' {{IPA|[la]}}||'''<span style="color:#00ffff">ཤ</span>''' {{IPA|[ɕa]}}||'''<span style="color:#00ffff">ས</span>''' {{IPA|[sa]}}
 |-
-|'''<span style="color:#ffff00">ཧ</span>''' {{IPA|[ˌhá]}}||'''<span style="color:#ffff00">ཨ</span>''' {{IPA|[ˈá]}}
+|'''<span style="color:#ffff00">ཧ</span>''' {{IPA|[ã]}}||'''<span style="color:#ffff00">ཨ</span>''' {{IPA|[a]}}
 |}
 
 ==བོད་སྐད་ཀྱི་ཁྱབ་ཁོངས།==
