--- a/བོད་སྐད།.mw
+++ b/བོད་སྐད།.mw
@@ -12,15 +12,15 @@
 
 {| cellpadding="8" style="font-size: large" 
 |- 
-|'''<span style="color:#0000ff">ཀ</span>''' {{IPA|[ka]}} ||'''<span style="color:#00ff00">ཁ</span>''' {{IPA|[ᵑɡã]}}||'''<span style="color:#ff0000">ག</span>''' {{IPA|[ɡa]}}||'''<span style="color:#C0C0C0">ང</span>''' {{IPA|[ŋa]}}
+|'''<span style="color:#0000ff">ཀ</span>''' {{IPA|[ka]}} ||'''<span style="color:#00ff00">ཁ</span>''' {{IPA|[ᵑkã]}}||'''<span style="color:#ff0000">ག</span>''' {{IPA|[ɡa]}}||'''<span style="color:#C0C0C0">ང</span>''' {{IPA|[ŋa]}}
 |-
-|'''<span style="color:#0000ff">ཅ</span>''' {{IPA|[tɕa]}}||'''<span style="color:#00ff00">ཆ</span>''' {{IPA|[ⁿdʑã]}}||'''<span style="color:#ff0000">ཇ</span>''' {{IPA|[dʑa]}}||'''<span style="color:#C0C0C0">ཉ</span>''' {{IPA|[ɲa]}}
+|'''<span style="color:#0000ff">ཅ</span>''' {{IPA|[tɕa]}}||'''<span style="color:#00ff00">ཆ</span>''' {{IPA|[ⁿtɕã]}}||'''<span style="color:#ff0000">ཇ</span>''' {{IPA|[dʑa]}}||'''<span style="color:#C0C0C0">ཉ</span>''' {{IPA|[ɲa]}}
 |-
-|'''<span style="color:#0000ff">ཏ</span>''' {{IPA|[ta]}}||'''<span style="color:#00ff00">ཐ</span>''' {{IPA|[ⁿdã]}}||'''<span style="color:#ff0000">ད</span>''' {{IPA|[da]}}||'''<span style="color:#C0C0C0">ན</span>''' {{IPA|[na]}}
+|'''<span style="color:#0000ff">ཏ</span>''' {{IPA|[ta]}}||'''<span style="color:#00ff00">ཐ</span>''' {{IPA|[ⁿtã]}}||'''<span style="color:#ff0000">ད</span>''' {{IPA|[da]}}||'''<span style="color:#C0C0C0">ན</span>''' {{IPA|[na]}}
 |-
-|'''<span style="color:#0000ff">པ</span>''' {{IPA|[pa]}}||'''<span style="color:#00ff00">ཕ</span>''' {{IPA|[ᵐbã]}}||'''<span style="color:#ff0000">བ</span>''' {{IPA|[ba]}}||'''<span style="color:#C0C0C0">མ</span>''' {{IPA|[ma]}}
+|'''<span style="color:#0000ff">པ</span>''' {{IPA|[pa]}}||'''<span style="color:#00ff00">ཕ</span>''' {{IPA|[ᵐpã]}}||'''<span style="color:#ff0000">བ</span>''' {{IPA|[ba]}}||'''<span style="color:#C0C0C0">མ</span>''' {{IPA|[ma]}}
 |-
-|'''<span style="color:#0000ff">ཙ</span>''' {{IPA|[tsa]}}||'''<span style="color:#00ff00">ཚ</span>''' {{IPA|[ⁿdzã]}}||'''<span style="color:#ff0000">ཛ</span>''' {{IPA|[dza]}}||'''<span style="color:#808080">ཝ</span>''' {{IPA|[wa]}}
+|'''<span style="color:#0000ff">ཙ</span>''' {{IPA|[tsa]}}||'''<span style="color:#00ff00">ཚ</span>''' {{IPA|[ⁿtsã]}}||'''<span style="color:#ff0000">ཛ</span>''' {{IPA|[dza]}}||'''<span style="color:#808080">ཝ</span>''' {{IPA|[wa]}}
 |-
 |'''<span style="color:#ff00ff">ཞ</span>''' {{IPA|[ʑa]}}||'''<span style="color:#ff00ff">ཟ</span>''' {{IPA|[za]}}||'''<span style="color:#ff00ff">འ</span>''' {{IPA|[a]}}||'''<span style="color:#ff00ff">ཡ</span>''' {{IPA|[ja]}}
 |-
