*Empty MediaWiki Message*

--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -20,7 +20,7 @@
 |-
 | རྒྱལ་པོ། || [[འཇིགས་མེད་ཁེ་སར་རྣམ་རྒྱལ་དབང་ཕྱུག]]
 |-
-| [[སྲིད་བློན།]] || ཚེ་རིང་སྟོབ་རྒྱས།
+| [[སྲིད་བློན།]] || བློ་གྲོས་ ཚེ་རིང་།
 |-
 | Area<br />&nbsp;- Total<br />&nbsp;- % water
 | ༣༨ ༣༩༤ km²<br />༡,༣༥%</tr>               
@@ -28,15 +28,15 @@
 | Population<br />&nbsp;- Total ([[༢༠༠༩]])<br />&nbsp;- Population density
 | ༦༩༧,༠༠༠
 |-
-| Capital || [[ཐིམ་ཕུུུུ|ཐིམ་ཕུགུ]]
+| Capital || [[ཐིམ་ཕུ|ཐིམ་ཕུགུ]]
 |-
 | དངུལ་ || དངུལ་ཀྲམ (UTC)
 |-
-| Time zone || UTC+0
+| Time zone || UTC+༦
 |-
 | རྒྱལ་པོའི་བརྟན་བཞུགས། || [[འབྲུག་ཙན་དན་]]<br />[[File:National Anthem of Bhutan - Ђуг ѕе́нде (འབྲུག་ཙན་དན).oga]]
 |-
-| Calling code || ༩༧༥
+| Calling code || +༩༧༥
 |}
 
 '''འབྲུག་ཡུལ་'''
